Attempted to implement Alert on invalid credentials

--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,4 @@
+/* login page */
 * {
     box-sizing: border-box;
 }
@@ -7,12 +8,12 @@
 }
 body {
     font-family: Arial;
-    background-color: #3498DB;
     padding: 50px;
 }
 .login {
     margin: 20px auto;
     width: 300px;
+    background-color: #3498DB;
 }
 .login-screen {
     background-color: #FFF;
@@ -75,4 +76,27 @@ input:focus {
     color: #444;
     display: block;
     margin-top: 12px;
+}
+
+/* Alert Stuff */
+.alert {
+    padding: 20px;
+    background-color: #f44336; /* Red */
+    color: white;
+    margin-bottom: 15px;
+}
+
+.closebtn {
+    margin-left: 15px;
+    color: white;
+    font-weight: bold;
+    float: right;
+    font-size: 22px;
+    line-height: 20px;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.closebtn:hover {
+    color: black;
 }
