--- a/templates/login.html
+++ b/templates/login.html
@@ -1,9 +1,9 @@
 <link rel="stylesheet" href="/static/style.css" type="text/css">
+{% extends "layout.html" %}
 {% block body %}
 {% if session['logged_in'] %}
 <p>You're logged in already!</p>
 {% else %}
-
 
 <form action="/login" method="POST">
   <div class="login">
