--- a/templates/layout.html
+++ b/templates/layout.html
@@ -7,7 +7,7 @@
   {% for message in messages %}
   <div class="alert">
     <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
-    test
+    {{ message }}
   </div>
   {% endfor %}
 </ul>
