--- a/static/jtl.css
+++ b/static/jtl.css
@@ -1,11 +1,74 @@
+body { 
+    background-image: url("bg.gif");
+    margin: 0;
+    padding: 0;
+    font: 12px/20px courier, monospace;
+}
+
+#footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 20px;
+    overflow: hidden;
+    -webkit-transition: all 0.3s ease-out;
+    -moz-transition: all 0.3s ease-out;
+    -o-transition: all 0.3s ease-out;
+    transition: all 0.3s ease-out;
+    zoom: 1;
+    background-color: rgba(0,0,0,0.3);
+    color: #DDD;
+}
+
+#footer a {
+    -webkit-transition: all 0.3s ease-out;
+    -moz-transition: all 0.3s ease-out;
+    -o-transition: all 0.3s ease-out;
+    transition: all 0.3s ease-out;
+    color: #DDD;
+ 
+}
+#footer:hover {
+    background-color: rgba(0,0,0,0.6);
+    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000000,endColorstr=#99000000)"; /* IE8 */
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000000,endColorstr=#99000000);   /* IE6 & 7 */
+    color: #fff;
+}
+
+#footer:hover a {
+    color: #fff;
+}
+
+#footer-left {
+    float: left;
+    padding-left: 20px;
+}
+
+#footer-right {
+    float: right;
+    padding-right: 20px;
+}
+
+@media only screen and (-moz-min-device-pixel-ratio: 2), only screen and (-o-min-device-pixel-ratio: 2/1), only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min-device-pixel-ratio: 2) {
+    body { background: url(bg.gif); background-size: 384px 80px; }
+}
+
+.centre {
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    margin-top: 5%;
+}
+
 /* login page */
 * {
     box-sizing: border-box;
 }
-
+/*
 *:focus {
     outline: none;
 }
+*/
 .login {
     background-color: rgba(0, 0, 0, 0);
     font-family: Arial;
