--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,6 +1,6 @@
 <!doctype html>
-<link rel="stylesheet" href="/static/style.css" type="text/css">
-<title>My Application</title>
+<link rel="stylesheet" href="/static/jtl.css" type="text/css">
+<title>JTL</title>
 {% with messages = get_flashed_messages() %}
 {% if messages %}
 <ul class=flashes>
