--- a/static/jtl.css
+++ b/static/jtl.css
@@ -49,10 +49,6 @@ body {
     padding-right: 20px;
 }
 
-@media only screen and (-moz-min-device-pixel-ratio: 2), only screen and (-o-min-device-pixel-ratio: 2/1), only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min-device-pixel-ratio: 2) {
-    body { background: url(bg.gif); background-size: 384px 80px; }
-}
-
 .centre {
     margin-left: auto;
     margin-right: auto;
@@ -61,14 +57,6 @@ body {
 }
 
 /* login page */
-* {
-    box-sizing: border-box;
-}
-/*
-*:focus {
-    outline: none;
-}
-*/
 .login {
     background-color: rgba(0, 0, 0, 0);
     font-family: Arial;
@@ -147,7 +135,13 @@ input:focus {
 }
 
 /* Alert Stuff */
+.flashes {
+    padding-left: 30px;
+    padding-right: 30px;
+}
 .alert {
+    font-family: Arial;
+    font-size: 16px;
     padding: 20px;
     background-color: #f44336; /* Red */
     color: white;
