updated requests link

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
 <body>
   <div id="footer">
     <div id="footer-left">
-      [ <a href="https://justthelads.party/ombi">Ombi</a> ] [ <a href="https://justthelads.party/plex">Plex</a> ]
+      [ <a href="https://justthelads.party/request">Requests</a> ] [ <a href="https://justthelads.party/plex">Plex</a> ]
     </div>
     <div id="footer-right" >
       <div id="helptext">
