--- a/templates/register.html
+++ b/templates/register.html
@@ -24,10 +24,10 @@
 	</div>
 
 	<div class="control-group">
-	  <input type="otp" class="login-field" value="" placeholder="OTP" name="otp">
-	  <label class="login-field-icon fui-lock" for="login-otp"></label>
+	  <input type="password" class="login-field" value="" placeholder="confirm password" name="confirm_password">
+	  <label class="login-field-icon fui-lock" for="login-pass"></label>
 	</div>
-	
+
 	<input type="submit" value="Register" class="btn btn-primary btn-large btn-block" >
 	<br>
       </div>
