--- a/templates/register.html
+++ b/templates/register.html
@@ -24,7 +24,7 @@
 	</div>
 
 	<div class="control-group">
-	  <input type="password" class="login-field" value="" placeholder="confirm password" name="confirm_password">
+	  <input type="password" class="login-field" value="" placeholder="confirm password" name="password_confirm">
 	  <label class="login-field-icon fui-lock" for="login-pass"></label>
 	</div>
 
