--- a/templates/register.html
+++ b/templates/register.html
@@ -5,7 +5,7 @@
 <p>You're logged in already!</p>
 {% else %}
 
-<form action="/register" method="POST">
+<form action="" method="POST">
   <div class="login">
     <div class="login-screen">
       <div class="app-title">
