--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <link rel="stylesheet" href="/static/jtl.css" type="text/css">
 <title>JTL</title>
+<link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
 {% with messages = get_flashed_messages() %}
 {% if messages %}
 <ul class=flashes>
